* acinclude.m4 (LIB_AC_PROG_CXX): Copied from libstdc++-v3. Use it. * Makefile.am (LIBLINK): Use CXX (and its tag) for linking. * aclocal.m4, configure, Makefile.in: Rebuilt.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49954 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/Makefile.am
+++ b/libjava/Makefile.am
@@ -71,7 +71,7 @@ GCJ_WITH_FLAGS = $(GCJ) --encoding=UTF-8
 
 GCJCOMPILE = $(LIBTOOL) --tag=GCJ --mode=compile $(GCJ_WITH_FLAGS) -fassume-compiled -fclasspath=$(here) -L$(here) $(JC1FLAGS) -MD -MT $@ -MF $(@:.lo=.d) -c
 GCJLINK = $(LIBTOOL) --tag=GCJ --mode=link $(GCJ) -L$(here) $(JC1FLAGS) $(LDFLAGS) -o $@
-LIBLINK = $(LIBTOOL) --tag=CC --mode=link $(CC) -L$(here) $(JC1FLAGS) $(LDFLAGS) -o $@
+LIBLINK = $(LIBTOOL) --tag=CXX --mode=link $(CXX) -L$(here) $(JC1FLAGS) $(LDFLAGS) -o $@
 
 ## We define this because otherwise libtool can be run with different
 ## values of `CXX' and will then get confused and fail to work.  So,
