* include/ffi.h.in: Add typedef for ffi_arg.         * src/ffitest.c (main): Declare rint with ffi_arg.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@50006 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libffi/include/ffi.h.in
+++ b/libffi/include/ffi.h.in
@@ -307,6 +307,16 @@ typedef struct {
 
 } ffi_cif;
 
+#if SIZEOF_ARG == 4
+typedef UINT32 ffi_arg;
+#else
+#if SIZEOF_ARG == 8
+typedef UINT64 ffi_arg;
+#else
+-- unsupported configuration
+#endif
+#endif
+
 /* ---- Definitions for the raw API -------------------------------------- */
 
 #if !FFI_NO_RAW_API
