* configure.in (libgcc_visibility): Substitute. 	* configure: Rebuilt. 	* mklibgcc.in: If libgcc_visibility = yes, make libgcc.a global 	defined symbols .hidden.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@50063 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/configure.in
+++ b/gcc/configure.in
@@ -1484,6 +1484,8 @@ if test x"$gcc_cv_as_hidden" = xyes; then
 		[Define if your assembler supports .hidden.])
 fi
 AC_MSG_RESULT($gcc_cv_as_hidden)
+libgcc_visibility=$gcc_cv_as_hidden
+AC_SUBST(libgcc_visibility)
 
 AC_MSG_CHECKING(assembler leb128 support)
 gcc_cv_as_leb128=no
