--- a/cfg-branch/gcc/ChangeLog.cfg
+++ b/cfg-branch/gcc/ChangeLog.cfg
@@ -1,3 +1,7 @@
+Mit Feb 27 18:16:37 CET 2002  Jan Hubicka  <jh@suse.cz>
+
+	* bb-reorder.c (find_traces_1_round): Fix copying.
+
 Mon Feb 25 17:47:37 CET 2002  Zdenek Dvorak
 
 	* Makefile.in (loop-new.o): Add dependency on params.h.
