* c-common.c, c-common.h, c-decl.c, c-lex.c, c-parse.in, 	c-tree.h, c-typeck.c, cppexp.c, cpplex.c, cpplib.c, cpplib.h, 	cppmacro.c, objc/lang-specs.h, objc/objc-act.c, 	builtin-types.def, builtins.def, dwarf2out.c, dwarfout.c, 	gcc.c, toplev.c: Delete code implementing -traditional mode.
	* ada/misc.c, ch/ch-tree.h, ch/decl.c, cp/decl2.c, f/com.c,
	f/lex.c, f/top.c, java/builtins.c, java/decl.c: Delete
	traditional-mode-related code copied from the C front end
	but not used, or used only to permit the compiler to link.

	* doc/bugreport.texi, doc/cpp.texi, doc/extend.texi,
	doc/invoke.texi, doc/standards.texi, doc/trouble.texi:
	Document removal of -traditional mode for compilation, and
	remove documentation only relevant to that mode.

	* config/nextstep.h, config/ptx4.h, config/svr4.h,
	config/convex/convex.h, config/d30v/d30v.h,
	config/i386/dgux.h, config/i386/osf1elf.h,
	config/i386/osfelf.h, config/i386/osfrose.h,
	config/i386/sco5.h, config/i386/sol2.h, config/m68k/a-ux.h,
	config/m68k/hp310.h, config/m88k/dgux.h,
	config/m88k/dguxbcs.h, config/m88k/luna.h, config/m88k/m88k.c,
	config/m88k/m88k.h, config/m88k/openbsd.h,
	config/mips/abi64.h, config/mips/osfrose.h,
	config/mips/svr4-5.h, config/mips/svr4-t.h,
	config/sparc/sol2-sld-64.h, config/sparc/sol2.h,
	config/stormy16/stormy16.h: Remove all references to
	-traditional from target specs.  Delete all mention of the
	no-longer-necessary TRADITIONAL_RETURN_FLOAT macro.  Also
	delete a couple of commented-out definitions of
	DOLLARS_IN_IDENTIFIERS, with (incorrect) commentary referring
	to -traditional.

	* system.h: Poison TRADITIONAL_RETURN_FLOAT.
	* doc/tm.texi: Remove mention of TRADITIONAL_RETURN_FLOAT macro.

	* testsuite/gcc.c-torture/execute/920730-1t.c,
	testsuite/gcc.c-torture/execute/920730-1t.x,
	testsuite/gcc.dg/ext-glob.c: Delete test cases, only relevant
	to -traditional.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@50110 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/c-parse.in
+++ b/gcc/c-parse.in
@@ -367,7 +367,7 @@ datadef:
 	  setspecs notype_initdecls ';'
 		{ if (pedantic)
 		    error ("ISO C forbids data definition with no type or storage class");
-		  else if (!flag_traditional)
+		  else
 		    warning ("data definition has no type or storage class"); 
 
 		  POP_DECLSPEC_STACK; }
@@ -3280,11 +3280,10 @@ struct resword
 
 /* Disable mask.  Keywords are disabled if (reswords[i].disable & mask) is
    _true_.  */
-#define D_TRAD	0x01	/* not in traditional C */
-#define D_C89	0x02	/* not in C89 */
-#define D_EXT	0x04	/* GCC extension */
-#define D_EXT89	0x08	/* GCC extension incorporated in C99 */
-#define D_OBJC	0x10	/* Objective C only */
+#define D_C89	0x01	/* not in C89 */
+#define D_EXT	0x02	/* GCC extension */
+#define D_EXT89	0x04	/* GCC extension incorporated in C99 */
+#define D_OBJC	0x08	/* Objective C only */
 
 static const struct resword reswords[] =
 {
@@ -3337,7 +3336,7 @@ static const struct resword reswords[] =
   { "break",		RID_BREAK,	0 },
   { "case",		RID_CASE,	0 },
   { "char",		RID_CHAR,	0 },
-  { "const",		RID_CONST,	D_TRAD },
+  { "const",		RID_CONST,	0 },
   { "continue",		RID_CONTINUE,	0 },
   { "default",		RID_DEFAULT,	0 },
   { "do",		RID_DO,		0 },
@@ -3349,24 +3348,24 @@ static const struct resword reswords[] =
   { "for",		RID_FOR,	0 },
   { "goto",		RID_GOTO,	0 },
   { "if",		RID_IF,		0 },
-  { "inline",		RID_INLINE,	D_TRAD|D_EXT89 },
+  { "inline",		RID_INLINE,	D_EXT89 },
   { "int",		RID_INT,	0 },
   { "long",		RID_LONG,	0 },
   { "register",		RID_REGISTER,	0 },
-  { "restrict",		RID_RESTRICT,	D_TRAD|D_C89 },
+  { "restrict",		RID_RESTRICT,	D_C89 },
   { "return",		RID_RETURN,	0 },
   { "short",		RID_SHORT,	0 },
-  { "signed",		RID_SIGNED,	D_TRAD },
+  { "signed",		RID_SIGNED,	0 },
   { "sizeof",		RID_SIZEOF,	0 },
   { "static",		RID_STATIC,	0 },
   { "struct",		RID_STRUCT,	0 },
   { "switch",		RID_SWITCH,	0 },
   { "typedef",		RID_TYPEDEF,	0 },
-  { "typeof",		RID_TYPEOF,	D_TRAD|D_EXT },
+  { "typeof",		RID_TYPEOF,	D_EXT },
   { "union",		RID_UNION,	0 },
   { "unsigned",		RID_UNSIGNED,	0 },
   { "void",		RID_VOID,	0 },
-  { "volatile",		RID_VOLATILE,	D_TRAD },
+  { "volatile",		RID_VOLATILE,	0 },
   { "while",		RID_WHILE,	0 },
 ifobjc
   { "id",		RID_ID,			D_OBJC },
@@ -3545,7 +3544,6 @@ init_reswords ()
   unsigned int i;
   tree id;
   int mask = (flag_isoc99 ? 0 : D_C89)
-	      | (flag_traditional ? D_TRAD : 0)
 	      | (flag_no_asm ? (flag_isoc99 ? D_EXT : D_EXT|D_EXT89) : 0);
 
   if (c_language != clk_objective_c)
