* bb-reorder.c: Cleanup and bug fix - correct using of visited and 	duplicated flags.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@50133 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/cfg-branch/gcc/ChangeLog.cfg
+++ b/cfg-branch/gcc/ChangeLog.cfg
@@ -1,3 +1,8 @@
+Thu Feb 28 13:42:26 CET 2002  Josef Zlomek <zlomek@matfyz.cz>
+
+	* bb-reorder.c: Cleanup and bug fix - correct using of visited and
+	duplicated flags.
+
 Mit Feb 27 18:16:37 CET 2002  Jan Hubicka  <jh@suse.cz>
 
 	* bb-reorder.c (find_traces_1_round): Fix copying.
