* loop-new.c (try_remove_path) Fix updating dominators.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@50163 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/cfg-branch/gcc/ChangeLog.cfg
+++ b/cfg-branch/gcc/ChangeLog.cfg
@@ -1,3 +1,7 @@
+Don Feb 28 23:34:34 CET 2002  Zdenek Dvorak
+
+	* loop-new.c (try_remove_path) Fix updating dominators.
+
 Don Feb 28 16:39:10 CET 2002  Jan Hubicka  <jh@suse.cz>
 
 	* mainline merge (cfg-merge-20022802 tag).
