* tree.h (TARGET_EXPR_SLOT, TARGET_EXPR_INITIAL): New macros.         (TARGET_EXPR_CLEANUP): New macro. cp/         * except.c: Don't include decl.h or obstack.h.  Do include         tree-inline.h.         (build_throw): Destroy temporaries from the thrown         expression before calling __cxa_throw.  Construct a thrown         temporary directly into the exception object.         (stabilize_throw_expr): New function.         (wrap_cleanups_r): New function.         * tree.c (stabilize_expr): New function.         * init.c (build_init): New function.         * Make-lang.in (cp/except.o): Adjust .h deps.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@50177 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/Make-lang.in
+++ b/gcc/cp/Make-lang.in
@@ -277,7 +277,7 @@ cp/tree.o: cp/tree.c $(CXX_TREE_H) flags.h toplev.h $(GGC_H) $(RTL_H) \
 cp/ptree.o: cp/ptree.c $(CXX_TREE_H) $(SYSTEM_H)
 cp/rtti.o: cp/rtti.c $(CXX_TREE_H) flags.h toplev.h
 cp/except.o: cp/except.c $(CXX_TREE_H) flags.h $(RTL_H) except.h toplev.h \
-  cp/cfns.h $(EXPR_H) libfuncs.h cp/decl.h $(OBSTACK_H)
+  cp/cfns.h $(EXPR_H) libfuncs.h tree-inline.h
 cp/expr.o: cp/expr.c $(CXX_TREE_H) $(RTL_H) flags.h $(EXPR_H) toplev.h \
   except.h $(TM_P_H)
 cp/pt.o: cp/pt.c $(CXX_TREE_H) cp/decl.h cp/parse.h cp/lex.h toplev.h \
