--- a/cfg-branch/gcc/ChangeLog.cfg
+++ b/cfg-branch/gcc/ChangeLog.cfg
@@ -1,3 +1,7 @@
+Fri Mar  1 11:33:46 CET 2002  Zdenek Dvorak
+
+	* loop-new.c (try_remove_path): Modified.
+
 Don Feb 28 23:34:34 CET 2002  Zdenek Dvorak
 
 	* loop-new.c (try_remove_path) Fix updating dominators.
