--- a/ast-optimizer-branch/gcc/Makefile.in
+++ b/ast-optimizer-branch/gcc/Makefile.in
@@ -703,7 +703,7 @@ C_AND_OBJC_OBJS = attribs.o c-errors.o c-lex.o c-pragma.o c-decl.o c-typeck.o \
   c-convert.o c-aux-info.o c-common.o c-format.o c-semantics.o \
   c-objc-common.o libcpp.a $(C_TARGET_OBJS) \
   tree-cfg.o tree-dfa.o tree-ssa.o tree-optimize.o c-pretty-print.o \
-  c-simplify.o
+  c-simplify.o c-call-graph.o
 
 # Language-specific object files for C.
 C_OBJS = c-parse.o c-lang.o $(C_AND_OBJC_OBJS)
