* Makefile.in (CRTSTUFF_CFLAGS): Add -fno-zero-initialized-in-bss. 	* doc/invoke.texi (-fno-zero-initialized-in-bss): Document. 	* flags.h (flag_zero_initialized_in_bss): Declare. 	* toplev.c (flag_zero_initialized_in_bss): New flag. 	(lang_independent_options): Add flag_zero_initialized_in_bss. 	* tree.c (initializer_zerop): New function. 	* tree.h (initializer_zerop): Declare. 	* varasm.c (assemble_variable): If we can emit bss, put zero 	initializers in the bss section.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@50218 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/Makefile.in
+++ b/gcc/Makefile.in
@@ -372,7 +372,8 @@ TARGET_LIBGCC2_CFLAGS =
 
 # Options to use when compiling crtbegin/end.
 CRTSTUFF_CFLAGS = -O2 $(GCC_CFLAGS) $(INCLUDES) $(MULTILIB_CFLAGS) -g0 \
-  -finhibit-size-directive -fno-inline-functions -fno-exceptions
+  -finhibit-size-directive -fno-inline-functions -fno-exceptions \
+  -fno-zero-initialized-in-bss
 
 # Additional sources to handle exceptions; overridden on ia64.
 LIB2ADDEH = $(srcdir)/unwind-dw2.c $(srcdir)/unwind-dw2-fde.c \
