* java/awt/MediaTracker.java: Implemented.         * Makefile.am: Add MediaTracker.         * Makefile.in: Rebuilt.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@50348 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/libjava/Makefile.am
+++ b/gcc-3_1-branch/libjava/Makefile.am
@@ -654,6 +654,7 @@ java/awt/Label.java \
 java/awt/LayoutManager.java \
 java/awt/LayoutManager2.java \
 java/awt/List.java \
+java/awt/MediaTracker.java \
 java/awt/Menu.java \
 java/awt/MenuBar.java \
 java/awt/MenuComponent.java \
