* cfgrtl.c (purge_dead_edges): Set BB_DRITY flags if edge has been removed; 	fix return value. 	* combine.c (combine_instructions): Dirtify blocks where we failed to 	update liveness; purge dead edges; use update_life_info_in_dirty_blocks. 	* toplev.c (rest_of_compilation): Do not purge_dead_edges after combine.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@50362 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/cfg-branch/gcc/ChangeLog.cfg
+++ b/cfg-branch/gcc/ChangeLog.cfg
@@ -1,3 +1,11 @@
+Wed Mar  6 18:41:29 CET 2002  Jan Hubicka  <jh@suse.cz>
+
+	* cfgrtl.c (purge_dead_edges): Set BB_DRITY flags if edge has been removed;
+	fix return value.
+	* combine.c (combine_instructions): Dirtify blocks where we failed to
+	update liveness; purge dead edges; use update_life_info_in_dirty_blocks.
+	* toplev.c (rest_of_compilation): Do not purge_dead_edges after combine.
+
 Tue Mar  5 19:40:56 CET 2002  Jan Hubicka  <jh@suse.cz>
 
 	* mainline merge (cfg-merge-20020503 tag).
